# rusty-tunes

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
backend/: Cargo.toml  build.rs
backend/src/: build.rs  main.rs
core/: Cargo.toml
core/src/: common.rs  deezer_api.rs  deezer_wrapper.rs  lib.rs  parser.rs
frontend/: Cargo.toml  index.html
frontend/src/: fetchstates.rs  main.rs  xmlplist.rs
resources/: itunes_library_redux.xml
src/: deezer_wrapper.rs  main.rs  parser.rs
