[package]
name = "rusty-tunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
plist = "1"
serde = "1.0.192"
serde_derive = "1.0.192"
deezer-rs = { git = "https://github.com/tsirysndr/deezer-rs" }
#deezer-rs = { path = "../deezer-rs" }
tokio = "1.34.0"
rand = "0.8.5"
open = "5.0.1"
eframe = "0.24.1"
egui_extras = { version = "0.24.1", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for
futures = "0.3.30"
