[package]
name = "rusty-tunes-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusty-tunes-core = {path = "../core"}

open = "5.0.1"
clap = { version = "4.4.10", features = ["derive"] }
tokio = "1.34.0"
rand = "0.8.5"
once_cell = "1.19.0"
eframe = "0.24.1"
egui_extras = { version = "0.24.1", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for