[package]
name = "rusty-tunes-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = "1"
serde = "1.0.192"
serde_derive = "1.0.192"
deezer-rs = { git = "https://github.com/tsirysndr/deezer-rs" }
#deezer-rs = { path = "../deezer-rs" }
futures = "0.3.30"
