[package]
name = "rusty-tunes-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
getrandom = { version = "0.2.12", features = ["js"] }
reqwest = { version = "0.11.23", features = ["json"] }
plist = "1.6.0"
serde = "1.0.196" # use derive feature instead?
serde_derive = "1.0.196"
