[package]
name = "rusty-tunes-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-logger = "0.2.0"
log = "0.4.20"
web-sys = "0.3.66"
pulldown-cmark = "0.9.3"
reqwasm = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
