[package]
name = "rusty-tunes-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusty-tunes-core = {path = "../core"}

#wasm-bindgen = "=0.2.85"
yew = { version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"
wasm-logger = "0.2.0"
log = "0.4.20"
web-sys = "0.3.67"
pulldown-cmark = "0.9.3"
reqwasm = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
wasm-bindgen-futures = "0.4.40"
